now with 50% more editing and deleting action and improved creation

--- a/sinatra-mvc/app/views/form.erb
+++ b/sinatra-mvc/app/views/form.erb
@@ -6,7 +6,7 @@
 <form class="col-md-3" action="/" method="post">
 <div class="form-group">
 	<label for="birthdate">Enter your birthdate</label>
-	<input class="form-control" name="birthdate" type="text"> <!-- change type back to date after user input stuff dealt with -->
+	<input class="form-control" name="birthdate" type="date"> 
 	<p> <%= @error %> </p> 
 </div>
 	<input class="btn btn-info active" type="submit">
